primeira aba terminada

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <nav class="navegação">
 
-        <a href="index.html"><img src="png.monster-321.png"></a>
+        <a href="index.html"><img src="esmeralda.jfif"></a>
 
-    <ul>
+    <ul class="menu">
     <li> <a href="contato.html">contato</a></li>
     <li> <a href="carrinho.html">carrinho</a></li>
     <li><a href="produto.html">produtos</a></li>
@@ -22,60 +22,61 @@
     </nav>   
 </header>
 <main>
-<div class="grade">
-<article class="vendas">
+
+<article class="trocar">
     <h1 class="titulo">Bem vindo a loja de produtos quadriculados! </h1>
 <p class="texto">confiras todos os nossos incríveis 
     produtos que estão a sua disposição,vamos conferir! </p>
 
-    <h1>Produtos a baixo!</h1>
+    <h1 class="titulo">Produtos a baixo!</h1>
 </article>
 
+<div class="grade">
 <article class="vendas">
-    <img src="terra.jfif">
-    <a class="botao" href="index.html"></a>
+    <img src="terrapng.jfif">
     <!--mudar para java script-->
-    <h3>Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
-    <button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+    <h3 class="textprod">Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
+    <h1>19,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="preda.jfif">
-    <h3>objeto mais duravel coletado por picaretas,
+    <img src="predapng.jfif">
+    <h3 class="textprod">objeto mais duravel coletado por picaretas,
     otimo para construções e criação de ferramentas básicas</h3>
-    <a class="botao" href="index.html"></a>
-    <button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+    <h1 class="textprod">25,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
     </article>
 
 <article class="vendas">
 <img src="madera.png">
-<h3>objeto de média durabilidade, muito utilizado em criação de ferramentas,
+<h3 class="textprod">objeto de média durabilidade, muito utilizado em criação de ferramentas,
     e também para construções</h3>
-    <a class="botao" href="index.html"></a>
-    <button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+    <h1 class="textprod">22,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="tnt.jfif">
-<h3>objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
-<a class="botao" href="index.html"></a>
-<button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+<img src="tntpng.jfif">
+<h3 class="textprod">objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
+<h1 class="textprod">49,99R$</h1>
+<button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="dima.jfif">
-<h3>minério mais dificil de se achar na dimensão normal do jogo,
+<img src="dimapng.jfif">
+<h3 class="textprod">minério mais dificil de se achar na dimensão normal do jogo,
     utilizado principalmente na criação de ferramentas</h3>
-    <a class="botao" href="index.html"></a>
-    <button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+    <h1 class="textprod">159,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="obsi.jfif">
-<h3>bloco mais dificil de se partir na dimensão normal,
+<img src="obpng.jfif">
+<h3 class="textprod">bloco mais dificil de se partir na dimensão normal,
  só pode ser obtido após ter uma picareta de diamante </h3>
- <a class="botao" href="index.html"></a>
- <button class="botao" href="index.html"> <img src="cart.png">clique aqui</a>
+ <h1 class="textprod">199,99R$</h1>
+ <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 </div>
