--- a/produto.html
+++ b/produto.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>produtos</title>
 </head>
 <body>
+    <h1 class="titulo">confira nossos mais novos produtos recém adquiridos!</h1>
+
     
 </body>
 </html>
