--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <nav class="navegação">
 
-        <a href="index.html"><img src="esmeralda.jfif"></a>
+        <a href="index.html"><img src="esmeralda.png"></a>
 
     <ul class="menu">
-    <li> <a href="contato.html">contato</a></li>
-    <li> <a href="carrinho.html">carrinho</a></li>
-    <li><a href="produto.html">produtos</a></li>
+    <li> <a href="contato.html"><img src="cell.png"></a></li>
+    <li> <a href="carrinho.html"><img src="cart.png"></a></li>
+    <li><a href="produto.html"><img src="báu (1).png"></a></li>
 
     </ul>
     </nav>   
@@ -25,15 +25,14 @@
 
 <article class="trocar">
     <h1 class="titulo">Bem vindo a loja de produtos quadriculados! </h1>
-<p class="texto">confiras todos os nossos incríveis 
-    produtos que estão a sua disposição,vamos conferir! </p>
+<p class="texto">confiras todos os nossos produtos mais vendidos atualmente, vamos conferir! </p>
 
     <h1 class="titulo">Produtos a baixo!</h1>
 </article>
 
 <div class="grade">
 <article class="vendas">
-    <img src="terrapng.jfif">
+    <img src="terrapng.png">
     <!--mudar para java script-->
     <h3 class="textprod">Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
     <h1>19,99R$</h1>
@@ -41,7 +40,7 @@
 </article>
 
 <article class="vendas">
-    <img src="predapng.jfif">
+    <img src="predapng.png">
     <h3 class="textprod">objeto mais duravel coletado por picaretas,
     otimo para construções e criação de ferramentas básicas</h3>
     <h1 class="textprod">25,99R$</h1>
@@ -57,14 +56,14 @@
 </article>
 
 <article class="vendas">
-<img src="tntpng.jfif">
+<img src="tntpng.png">
 <h3 class="textprod">objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
 <h1 class="textprod">49,99R$</h1>
 <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="dimapng.jfif">
+<img src="dimapng.png">
 <h3 class="textprod">minério mais dificil de se achar na dimensão normal do jogo,
     utilizado principalmente na criação de ferramentas</h3>
     <h1 class="textprod">159,99R$</h1>
@@ -72,7 +71,7 @@
 </article>
 
 <article class="vendas">
-<img src="obpng.jfif">
+<img src="obpng.png">
 <h3 class="textprod">bloco mais dificil de se partir na dimensão normal,
  só pode ser obtido após ter uma picareta de diamante </h3>
  <h1 class="textprod">199,99R$</h1>
@@ -84,7 +83,9 @@
 </main>
 
 <footer class="rodape">
-    chegamos ao fim de nosso sprodutos, por favor espere por mais lançamentos.
+    chegamos ao fim de nossos produtos, por favor espere por mais lançamentos.
+
+    <h3 class="final">criado por :Danilo Alan 27/02/2024 as 10:36:51 em um dia chuvoso</h3>
 </footer>
 
 </body>
