--- a/produto.html
+++ b/produto.html
@@ -3,11 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>produtos</title>
+    <link href="estilo.css" rel="stylesheet">
+    <title>loja</title>
 </head>
 <body>
-    <h1 class="titulo">confira nossos mais novos produtos recém adquiridos!</h1>
+    <header class="top">
 
-    
+    <nav class="navegação">
+
+        <a href="index.html"><img src="esmeralda.png"></a>
+
+    <ul class="menu">
+        <li> <a href="contato.html"><img src="cell.png"></a></li>
+        <li> <a href="carrinho.html"><img src="cart.png"></a></li>
+
+    </ul>
+    </nav>   
+</header>
+<main>
+
+<article class="trocar">
+    <h1 class="titulo">Bem vindo a loja de produtos quadriculados! </h1>
+<p class="texto">Confira todos os nossos incríveis 
+    produtos que estão a sua disposição,vamos conferir! </p>
+
+    <h1 class="titulo">Produtos a baixo!</h1>
+</article>
+
+<div class="grade">
+<article class="vendas">
+    <img src="terrapng.png">
+    <!--mudar para java script-->
+    <h3 class="textprod">Terra: Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
+    <h1>19,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="predapng.png">
+    <h3 class="textprod">pedregulho: objeto mais duravel coletado por picaretas,
+    otimo para construções e criação de ferramentas básicas</h3>
+    <h1 class="textprod">25,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    </article>
+
+<article class="vendas">
+<img src="madera.png">
+<h3 class="textprod">Madeira: objeto de média durabilidade, muito utilizado em criação de ferramentas,
+    e também para construções</h3>
+    <h1 class="textprod">22,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+<img src="tntpng.png">
+<h3 class="textprod"> TNT: Objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
+<h1 class="textprod">49,99R$</h1>
+<button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+<img src="dimapng.png">
+<h3 class="textprod">Diamante: minério mais dificil de se achar na dimensão normal do jogo,
+    utilizado principalmente na criação de ferramentas</h3>
+    <h1 class="textprod">159,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+<img src="obpng.png">
+<h3 class="textprod">Obsidian: Bloco mais dificil de se partir na dimensão normal,
+ só pode ser obtido após ter uma picareta de diamante </h3>
+ <h1 class="textprod">199,99R$</h1>
+ <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="estante.png">
+    <h3 class="textprod"> Uma estante de livros, usada para decoração e para encantamentos (não a quebre!)</h3>
+    <h1 class="textprod">59,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="agua.png">
+    <h3 class="textprod"> Água (molhado)</h3>
+    <h1 class="textprod">19,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="slime.png">
+    <h3 class="textprod"> Slime: bloco pegajoso e grudento, usado para movimentar blocos </h3>
+    <h1 class="textprod">79,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="dispenser.png">
+    <h3 class="textprod"> Dispenser:Ejeta tudo que esta dentro dele</h3>
+    <h1 class="textprod">49,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="tjolopreda.png">
+    <h3 class="textprod">Tijolo de pedra: Mais utilizada que o pedregulho mas somente em construções</h3>
+    <h1 class="textprod">59,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+
+<article class="vendas">
+    <img src="tjolo.png">
+    <h3 class="textprod">Tijolo: Coletado de argilas em riachos e levado ao fogo para formar moldes, 
+        utilizado para construções e decoração</h3>
+    <h1 class="textprod">39,99R$</h1>
+    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+</article>
+</div>
+
+</main>
+
+<footer class="rodape">
+    chegamos ao fim de nosso sprodutos, por favor espere por mais lançamentos.
+</footer>
+
 </body>
 </html>
