ajustes de fevereiro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="estilo.css" rel="stylesheet">
+    <link href="css/estilo.css" rel="stylesheet">
     <title>loja</title>
 </head>
 <body>
@@ -11,12 +11,12 @@
 
     <nav class="navegação">
 
-        <a href="index.html"><img src="esmeralda.png"></a>
+        <a href="index.html"><img src="image/esmeralda.png"></a>
 
     <ul class="menu">
-    <li> <a href="contato.html"><img src="cell.png"></a></li>
-    <li> <a href="carrinho.html"><img src="cart.png"></a></li>
-    <li><a href="produto.html"><img src="báu (1).png"></a></li>
+    <li> <a href="contato.html"><img src="image/cell.png"></a></li>
+    <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
+    <li><a href="produto.html"><img src="image/báu (1).png"></a></li>
 
     </ul>
     </nav>   
@@ -32,50 +32,50 @@
 
 <div class="grade">
 <article class="vendas">
-    <img src="terrapng.png">
+    <img src="image/terrapng.png">
     <!--mudar para java script-->
     <h3 class="textprod">Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
-    <h1>19,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <h1 class="textprod">19,99R$</h1>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="predapng.png">
+    <img src="image/predapng.png">
     <h3 class="textprod">objeto mais duravel coletado por picaretas,
     otimo para construções e criação de ferramentas básicas</h3>
     <h1 class="textprod">25,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
     </article>
 
 <article class="vendas">
-<img src="madera.png">
+<img src="image/madera.png">
 <h3 class="textprod">objeto de média durabilidade, muito utilizado em criação de ferramentas,
     e também para construções</h3>
     <h1 class="textprod">22,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="tntpng.png">
+<img src="image/tntpng.png">
 <h3 class="textprod">objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
 <h1 class="textprod">49,99R$</h1>
-<button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+<button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="dimapng.png">
+<img src="image/dimapng.png">
 <h3 class="textprod">minério mais dificil de se achar na dimensão normal do jogo,
     utilizado principalmente na criação de ferramentas</h3>
     <h1 class="textprod">159,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="obpng.png">
+<img src="image/obpng.png">
 <h3 class="textprod">bloco mais dificil de se partir na dimensão normal,
  só pode ser obtido após ter uma picareta de diamante </h3>
  <h1 class="textprod">199,99R$</h1>
- <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+ <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 </div>
