--- a/produto.html
+++ b/produto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="estilo.css" rel="stylesheet">
+    <link href="css/estilo.css" rel="stylesheet">
     <title>loja</title>
 </head>
 <body>
@@ -11,11 +11,11 @@
 
     <nav class="navegação">
 
-        <a href="index.html"><img src="esmeralda.png"></a>
+        <a href="index.html"><img src="image/esmeralda.png"></a>
 
     <ul class="menu">
-        <li> <a href="contato.html"><img src="cell.png"></a></li>
-        <li> <a href="carrinho.html"><img src="cart.png"></a></li>
+        <li> <a href="contato.html"><img src="image/cell.png"></a></li>
+        <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
 
     </ul>
     </nav>   
@@ -32,100 +32,100 @@
 
 <div class="grade">
 <article class="vendas">
-    <img src="terrapng.png">
+    <img src="image/terrapng.png">
     <!--mudar para java script-->
     <h3 class="textprod">Terra: Objeto facilmente coletavel por pás,pode ser usado para tapar buracos</h3>
-    <h1>19,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <h1 class="textprod">19,99R$</h1>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="predapng.png">
+    <img src="image/predapng.png">
     <h3 class="textprod">pedregulho: objeto mais duravel coletado por picaretas,
     otimo para construções e criação de ferramentas básicas</h3>
     <h1 class="textprod">25,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
     </article>
 
 <article class="vendas">
-<img src="madera.png">
+<img src="image/madera.png">
 <h3 class="textprod">Madeira: objeto de média durabilidade, muito utilizado em criação de ferramentas,
     e também para construções</h3>
     <h1 class="textprod">22,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="tntpng.png">
+<img src="image/tntpng.png">
 <h3 class="textprod"> TNT: Objeto de auta periculosidade, muito perigoso, de alta pirotecnia </h3>
 <h1 class="textprod">49,99R$</h1>
-<button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+<button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="dimapng.png">
+<img src="image/dimapng.png">
 <h3 class="textprod">Diamante: minério mais dificil de se achar na dimensão normal do jogo,
     utilizado principalmente na criação de ferramentas</h3>
     <h1 class="textprod">159,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-<img src="obpng.png">
+<img src="image/obpng.png">
 <h3 class="textprod">Obsidian: Bloco mais dificil de se partir na dimensão normal,
  só pode ser obtido após ter uma picareta de diamante </h3>
  <h1 class="textprod">199,99R$</h1>
- <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+ <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="estante.png">
+    <img src="image/estante.png">
     <h3 class="textprod"> Uma estante de livros, usada para decoração e para encantamentos (não a quebre!)</h3>
     <h1 class="textprod">59,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="agua.png">
+    <img src="image/agua.png">
     <h3 class="textprod"> Água (molhado)</h3>
     <h1 class="textprod">19,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="slime.png">
+    <img src="image/slime.png">
     <h3 class="textprod"> Slime: bloco pegajoso e grudento, usado para movimentar blocos </h3>
     <h1 class="textprod">79,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="dispenser.png">
+    <img src="image/dispenser.png">
     <h3 class="textprod"> Dispenser:Ejeta tudo que esta dentro dele</h3>
     <h1 class="textprod">49,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="tjolopreda.png">
+    <img src="image/tjolopreda.png">
     <h3 class="textprod">Tijolo de pedra: Mais utilizada que o pedregulho mas somente em construções</h3>
     <h1 class="textprod">59,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 
 <article class="vendas">
-    <img src="tjolo.png">
+    <img src="image/tjolo.png">
     <h3 class="textprod">Tijolo: Coletado de argilas em riachos e levado ao fogo para formar moldes, 
         utilizado para construções e decoração</h3>
     <h1 class="textprod">39,99R$</h1>
-    <button class="botao" href="index.html"> <img src="cart.png">adicionar as compras</button>
+    <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
 </article>
 </div>
 
 </main>
 
 <footer class="rodape">
-    chegamos ao fim de nosso sprodutos, por favor espere por mais lançamentos.
+    chegamos ao fim de nosso produtos, por favor espere por mais lançamentos.
 </footer>
 
 </body>
