mudar para mobile

--- a/carrinho.html
+++ b/carrinho.html
@@ -11,7 +11,7 @@
 
         <nav class="navegação">
     
-            <a href="index.html"><img src="image/esmeralda.png"></a>
+            <a class="logo1" href="index.html"><img src="image/esmeralda.png"></a>
     
         <ul class="menu">
         <li> <a href="contato.html"><img src="image/cell.png"></a></li>
