--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 
         <nav class="navegação">
     
-            <a href="index.html"><img src="image/esmeralda.png"></a>
+            <a class="logo1" href="index.html"><img src="image/esmeralda.png"></a>
     
         <ul class="menu">
         <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
