--- a/produto.html
+++ b/produto.html
@@ -11,11 +11,11 @@
 
     <nav class="navegação">
 
-        <a href="index.html"><img src="image/esmeralda.png"></a>
+        <a class="logo1" href="index.html"><img src="image/esmeralda.png" alt="logo"></a>
 
     <ul class="menu">
-        <li> <a href="contato.html"><img src="image/cell.png"></a></li>
-        <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
+        <li> <a href="contato.html"><img src="image/cell2.png" height="50" width="35"></a></li>
+        <li> <a href="carrinho.html"><img src="image/cart.png" height="50" width="50"></a></li>
 
     </ul>
     </nav>   
@@ -45,7 +45,7 @@
     otimo para construções e criação de ferramentas básicas</h3>
     <h1 class="textprod">25,99R$</h1>
     <button class="botao" href="index.html"> <img src="image/cart.png">adicionar as compras</button>
-    </article>
+</article>
 
 <article class="vendas">
 <img src="image/madera.png">
