--- a/produto.html
+++ b/produto.html
@@ -11,10 +11,10 @@
 
     <nav class="navegação">
 
-        <a class="logo1" href="index.html"><img src="image/esmeralda.png" alt="logo"></a>
+        <a class="logo1" href="index.html"><img src="image/esmeralda.png" height="60" width="70" alt="logo"></a>
 
     <ul class="menu">
-        <li> <a href="contato.html"><img src="image/cell2.png" height="50" width="35"></a></li>
+        <li> <a href="contato.html"><img src="image/cell2.png" height="70" width="45"></a></li>
         <li> <a href="carrinho.html"><img src="image/cart.png" height="50" width="50"></a></li>
 
     </ul>
