--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="logo1" href="index.html"><img src="image/esmeralda.png"></a>
 
     <ul class="menu">
-    <li> <a href="contato.html"><img src="image/cell.png"></a></li>
+    <li> <a href="contato.html"><img src="image/cell2.png"></a></li>
     <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
     <li><a href="produto.html"><img src="image/báu (1).png"></a></li>
 
