--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <header class="top">
 
-    <nav class="navegação">
+        <nav class="navegação">
 
-        <a class="logo1" href="index.html"><img src="image/esmeralda.png"></a>
+            <a class="logo1" href="index.html"><img src="image/esmeralda.png" height="60" width="70" alt="logo"></a>
+    
+        <ul class="menu">
+            <li> <a href="contato.html"><img src="image/cell2.png" height="70" width="45"></a></li>
+            <li> <a href="carrinho.html"><img src="image/cart.png" height="50" width="50"></a></li>
+            <li> <a href="produto.html"><img src="image/báu (1).png" height="70" width="60"></a></li>
 
-    <ul class="menu">
-    <li> <a href="contato.html"><img src="image/cell2.png"></a></li>
-    <li> <a href="carrinho.html"><img src="image/cart.png"></a></li>
-    <li><a href="produto.html"><img src="image/báu (1).png"></a></li>
-
-    </ul>
-    </nav>   
+        </ul>
+        </nav>   
 </header>
 <main>
 
